# world-cup-2026

./: .gitignore  README.md  collect_event_ids.py  collect_player_stats.py  event_ids.txt  final.py  player_based.py  pyproject.toml  requirements.txt  visualize_formation.py  weekly_team_analysis.py
.github/workflows/: python-quality.yml
data/assets/: player_images_manifest.csv  team_logos_manifest.csv
data/raw/: 12812990.json  12812994.json  12812997.json  12812999.json  12813001.json  12813003.json  12813007.json  12813008.json  12813010.json  12813011.json  12813013.json  12813014.json  12813015.json  12813016.json  12813020.json  15186502.json  15186504.json  15186526.json  15186537.json  15186624.json  15186672.json  15186687.json  15186717.json  15186720.json  15186732.json  15186740.json  15186744.json  15186747.json  15186751.json  15186769.json  15186771.json  15186800.json  15186821.json  15186827.json  15186828.json  15186832.json  15186836.json  15186840.json  15186841.json  15186850.json  (+10 more)
docs/: DEVELOPMENT.md
src/: collect_player_stats.py  main.py  player_based.py  visualize_formation.py  weekly_team_analysis.py
src/get_data/: collect_event_ids.py  collect_player_stats.py
src/goal_minute/: analyze_goal_timing.py  visualize_goal_timing.py  viusalize_team_goal_bucket.py
src/player_archetypes/: archetype_transfer_finder.py  create_archetype_map.py  show_archetype.py  show_player.py
src/player_heatmaps/: calculate_heatmap_similarity.py  visualize_player_heatmap.py
world_cup_data/: player_match_stats.csv  player_tournament_summary.csv
(+168 files in other folders)
