[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "wc26-transfer-intelligence"
version = "0.1.0"
description = "Football analytics and recruitment intelligence platform built from FIFA World Cup 2026 data."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Melih Şişkular" }
]

dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "matplotlib>=3.8,<4",
    "Pillow>=10,<13",
    "playwright>=1.45,<2",
]


[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "pandas-stubs>=2.2",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["wc26*"]
namespaces = false


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"


[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]


[tool.mypy]
python_version = "3.12"
files = ["src/wc26"]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true


[tool.coverage.run]
source = ["wc26"]
branch = true


[tool.coverage.report]
show_missing = true
skip_covered = true